=head1 NAME

Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.06

  Changed subroutine inclusive time to not count time
    spent recursed into the same subroutine.

  Removed use of vfscanf() to improve portability,
    thanks to Jan Dubois.

=head2 Changes in Devel::NYTProf 2.05 (svn r498) 8th Oct 2008

  Fixed alteration of $! during profiling thanks to Slaven Rezic.
  Fixed clock_gettime() clock selection to fallback to CLOCK_REALTIME
    if CLOCK_MONOTONIC is not available, e.g, on linux 2.4.
  Fixed error when application ends after DB::disable_profile().

  Added some docs to Devel::NYTProf::Apache
  Added clock=N option to enable user to select the clock.

=head2 Changes in Devel::NYTProf 2.04 (svn r483) 1st Oct 2008

  Fixed rare divide-by-zero error in reporting code.
  Fixed rare core dump in reporting code.
  Fixed detection of #line directives to be more picky.
  Fixed some compiler warnings thanks to Richard Foley.

  Added on-the-fly ~90% zip compression thanks to Nicholas Clark.
    Reduces data file size per million statements executed
    from approx ~13MB to ~1MB (depends on code being profiled).

  Added extra table of all subs sorted by inclusive time.

  No longer warns about '/loader/0x800d8c/...' synthetic file
    names perl assigns reading code from a CODE ref in @INC

=head2 Changes in Devel::NYTProf 2.03 (svn r405) 15 Aug 2008

  NOTES:
  1. File format changed. Old profiles can't be read.
  2. Perl 5.8.1 is the oldest perl version supported.

  Fixed accounting for time spent executing subs that were
    compiled in string evals.
  Fixed risk of file corruption by names containing newlines.

  Changed to also profile compile-time activity by default.
  Improved formating of stats for subs called by a statement.

  Added start=begin|init|end|no option to NYTPROF env var.
  Added addpid=1 option to NYTPROF env var.
  Added support for .pmc files.