@@ -13,6 +13,7 @@ INSTALL
 lib/Devel/NYTProf/Apache.pm
 lib/Devel/NYTProf/Core.pm
 lib/Devel/NYTProf/Data.pm
+lib/Devel/NYTProf/Test.pm
 lib/Devel/NYTProf.pm
 lib/Devel/NYTProf/Reader.pm
 lib/Devel/NYTProf/Util.pm
